[tool.poetry]
name = "waterplants"
version = "0.1.0"
description = ""
authors = ["Daniel Bachler <daniel@danielbachler.de>"]
readme = "README.md"

[tool.poetry.scripts]
waterplants = 'waterplants:main'

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.4.2"
docopt = "^0.6.2"
toml = "^0.10.2"
python-telegram-bot = "^20.4"
python-kasa = "^0.5.3"
asyncio = "^3.4.3"
requests = "^2.31.0"
tenacity = "^8.2.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
rope = "^1.9.0"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
